%%{init: {"er": {"layoutDirection": "LR", "diagramPadding": 48}, "flowchart": {"curve": "stepBefore"}}}%%
erDiagram
  direction LR

  purchase_order {
    UUID id PK
    UUID tenant_id
    VARCHAR po_no UK
    INT revision
    UUID supplier_id
    gd1_po_type po_type
    VARCHAR incoterm
    VARCHAR payment_term
    CHAR currency_code
    NUMERIC exchange_rate
    gd1_po_status status
    DATE expected_etd
    DATE expected_eta
    TIMESTAMPTZ confirmed_by_supplier_at
    VARCHAR supplier_ref_no
    NUMERIC tolerance_over_pct
    NUMERIC tolerance_under_pct
  }

  purchase_order_line {
    UUID id PK
    UUID tenant_id
    UUID purchase_order_id FK
    UUID item_id
    INT line_no
    gd1_po_line_status status
    NUMERIC qty_ordered
    NUMERIC qty_shipped
    NUMERIC qty_received
    NUMERIC unit_price
  }

  delivery_order {
    UUID id PK
    UUID tenant_id
    UUID purchase_order_id FK
    VARCHAR do_no UK
    UUID origin_warehouse_id
    UUID destination_warehouse_id
    VARCHAR transport_type
    gd1_do_status status
    TIMESTAMPTZ confirmed_at
  }

  delivery_order_line {
    UUID id PK
    UUID tenant_id
    UUID delivery_order_id FK
    UUID purchase_order_line_id FK
    NUMERIC qty_ordered
    NUMERIC qty_shipped
  }

  quotation {
    UUID id PK
    UUID tenant_id
    UUID delivery_order_id FK
    VARCHAR quotation_no UK
    UUID current_version_id FK
    gd1_quotation_status status
    UUID fds_sales_incharge_id
  }

  quotation_version {
    UUID id PK
    UUID tenant_id
    UUID quotation_id FK
    INT version_no
    NUMERIC freight_cost
    NUMERIC insurance_cost
    NUMERIC other_costs
    CHAR currency_code
    TEXT terms
    BOOLEAN is_inclusive
    UUID created_by
    TIMESTAMPTZ created_at
  }

  shipment {
    UUID id PK
    UUID tenant_id
    VARCHAR shipment_no UK
    gd1_shipment_mode mode
    UUID forwarder_id
    VARCHAR carrier
    VARCHAR vessel_flight
    VARCHAR bl_awb_no
    JSONB container_no
    VARCHAR pol
    VARCHAR pod
    DATE etd
    DATE eta
    DATE atd
    DATE ata
    gd1_shipment_status status
    gd1_customs_stream customs_stream
  }

  shipment_line {
    UUID id PK
    UUID tenant_id
    UUID shipment_id FK
    UUID delivery_order_line_id FK
    NUMERIC qty_shipped
    VARCHAR lot_no
  }

  shipment_milestone {
    UUID id PK
    UUID tenant_id
    UUID shipment_id FK
    SMALLINT sequence_no
    gd1_milestone_code milestone_code
    DATE planned_date
    DATE actual_date
    UUID recorded_by
    gd1_milestone_source source
  }

  po_stage_task {
    UUID id PK
    UUID tenant_id
    UUID purchase_order_id FK
    gd1_po_status po_stage
    VARCHAR task_name
    UUID task_template_id FK
    UUID assignee_id
    UUID assigned_by
    gd1_task_status status
    TIMESTAMPTZ due_date
    gd1_milestone_code linked_shipment_milestone
  }

  po_task_template {
    UUID id PK
    UUID tenant_id
    gd1_template_po_type po_type
    gd1_po_status po_stage
    VARCHAR task_name
    gd1_assignee_role default_assignee_role
    INT sla_hours
    gd1_milestone_code linked_milestone
    BOOLEAN is_active
  }

  purchase_order ||--o{ purchase_order_line : has
  purchase_order ||--o{ delivery_order : has
  delivery_order ||--o{ delivery_order_line : has
  purchase_order_line ||--o{ delivery_order_line : logs
  delivery_order ||--o| quotation : requests
  quotation ||--o{ quotation_version : versions
  delivery_order_line ||--o{ shipment_line : shipped_by
  shipment ||--o{ shipment_line : contains
  shipment ||--o{ shipment_milestone : tracks
  purchase_order ||--o{ po_stage_task : owns
  po_task_template ||--o{ po_stage_task : generates
